--- a/.dockerdev/frontend/Dockerfile.prod
+++ b/.dockerdev/frontend/Dockerfile.prod
@@ -10,15 +10,14 @@ RUN npm install --silent
 
 COPY frontend/. $APP_ROOT
 
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL $REACT_APP_API_URL
+
 RUN npm run build
 
 FROM nginx:alpine
 COPY --from=build /home/app/build /usr/share/nginx/html
 
-COPY .dockerdev/frontend/config/nginx.conf /etc/nginx/nginx.conf
-COPY .dockerdev/frontend/config/frontend.conf /etc/nginx/conf.d/default.conf
-
-RUN mkdir -p /var/pids
-RUN touch /var/pids/nginx.pid
-
 EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
